Added analytics frontend
