# routes/v1/index.js
@@ -5,15 +5,19 @@ const Classes = require("../../classes");
 // Create new Order
 router.post("/order", async (req, res, next) => {
   try {
+    //spawn a new random courier
     let order = new Classes.Order(req.body); // Create order
+    let courier = new Classes.Courier(
+      req.body.designatedCourier === "true" ? req.body.id : "any"
+    );
 
     res.status(200).json({
       status: "received",
       message: "Order successfully received.",
       order,
-      OrderQueue,
     });
   } catch (err) {
+    console.log(err);
     //Catch if the job object is missing or malformed and let the client know.
     res.status(405).json({ status: "Bad order", message: err });
   }
