# swagger.json
@@ -11,50 +11,10 @@
   "host": "localhost:8080",
   "basePath": "/api/v1",
   "paths": {
-    "/courier": {
-      "post": {
-        "tags": ["courier"],
-        "summary": "spawn a new courier and send it towards the kitchen",
-        "description": "Spawns a new courier.",
-        "consumes": ["application/x-www-form-urlencoded"],
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "name",
-            "in": "formData",
-            "description": "name of the courier",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "orderId",
-            "in": "formData",
-            "description": "id of the courier",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "travelTime",
-            "in": "formData",
-            "description": "travelTime of the carrier",
-            "required": false,
-            "type": "integer"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Courier successfully spawned."
-          },
-          "405": {
-            "description": "Bad courier format"
-          }
-        }
-      }
-    },
     "/order": {
       "post": {
         "tags": ["order"],
-        "summary": "post a new order to the system",
+        "summary": "post a new order to the system - also auto spawns a courier that may or may not be designated to the particular order",
         "description": "Submits a new order to the system.",
         "consumes": ["application/x-www-form-urlencoded"],
         "produces": ["application/json"],
@@ -69,16 +29,24 @@
           {
             "name": "name",
             "in": "formData",
-            "description": "name of the courier",
+            "description": "name of the order",
             "required": false,
             "type": "string"
           },
           {
             "name": "prepTime",
             "in": "formData",
-            "description": "Prepartion time for the order in MS",
+            "description": "Prep time for the order in seconds",
             "required": false,
             "type": "integer"
+          },
+          {
+            "name": "designatedCourier",
+            "in": "formData",
+            "description": "True if order is to be picked up by a particular courier",
+            "required": false,
+            "type": "boolean",
+            "options": ["true", "false"]
           }
         ],
         "responses": {
